--- a/core/templates/announcements.html
+++ b/core/templates/announcements.html
@@ -6,18 +6,19 @@
 <li class="nav-item">
   <a class="nav-link fw-medium" href="{% url 'home' %}">Home</a>
 </li>
-<li class="nav-item active">
+<li class="nav-item">
   <a class="nav-link fw-medium" href="{% url 'about' %}">About</a>
 </li>
-<li class="nav-item">
+<li class="nav-item active">
   <a class="nav-link fw-medium" href="{% url 'announcements' %}">Announcements</a>
 </li>
-
 {% endblock nav %}
+
 {% block content %}
-    <h1>This is the About page.</h1>
-    <ul>
-        <li>Name: {{ name }}</li>
-        <li>Student ID: {{ student_id }}</li>
-    </ul>
+<h1>This is the Announcements page.</h1>
+<ul>
+  {% for id, ann in lists.items %}
+    <li><a href="{% url 'announcement_detail' id %}" class="link">{{ ann.title }}</a></li>
+  {% endfor %}
+</ul>
 {% endblock content %}
