--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,13 +1,24 @@
 {% extends "base.html" %}
 
 {% block title %}{{ title }}{% endblock title %}
-{% block content %}
-    <h1>This is the Home page</h1>
-    <p>Welcome to our course.</p>
-    <ul>
-        <li>Course: {{ course }}</li>
-        <li>Units: 3</li>
-    </ul>
 
-    <p><a href="{% url 'about' %}">About</a></p>
+{% block nav %}
+<li class="nav-item active">
+  <a class="nav-link fw-medium" href="{% url 'home' %}">Home</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link fw-medium" href="{% url 'about' %}">About</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link fw-medium" href="{% url 'announcements' %}">Announcements</a>
+</li>
+{% endblock nav %}
+
+{% block content %}
+<h1>This is the Home page.</h1>
+<p>Welcome to our course.</p>
+<ul>
+  <li>Course: {{ course }}</li>
+  <li>Units: {{ units }}</li>
+</ul>
 {% endblock content %}
